<resources>
    <string name="app_name">AssignmentApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="start_recording">Start Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile">Mobile</string>
    <string name="not_a_user_please_sign_up">Not a user Please sign up</string>
    <string name="record_audio">Record Audio</string>
    <string name="profile">Profile</string>
</resources>