<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.SigninFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="180dp" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_a_user_please_sign_up"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textSize="18sp"
        />


</LinearLayout>